Update the theme to be align with the style guide. Also a bunch of style fixes.
Summary:
- Make sass variables from colors on the style guide.
- Fix the color of the tabs
- Fix the color of the left hand drawer
- Make the font smaller

Test Plan: screenshot

Reviewers: michelle, #engineering

Reviewed By: michelle, #engineering

JIRA Issues: PL-1237, PL-1231, PL-1097

Differential Revision: https://phab.corp.pixielabs.ai/D2909

GitOrigin-RevId: 7772be732995d3e4e1aae040d98ab59e5b76af43

--- a/src/ui/src/containers/editor/content.scss
+++ b/src/ui/src/containers/editor/content.scss
@@ -26,19 +26,19 @@
 .pixie-editor--result-viewer {
   display: flex;
   flex-direction: column;
-}
 
-.pixie-editor--result-viewer.center-content {
-  align-items: center;
-  justify-content: center;
+  &.center-content {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .gutter {
   background-color: $border-color;
-}
 
-.gutter:hover {
-  cursor: row-resize;
+  &:hover {
+    cursor: row-resize;
+  }
 }
 
 .pixie-editor--content-title-row {
@@ -48,4 +48,16 @@
   align-items: center;
   padding: 0 1.5rem;
   border-bottom: 1px solid $border-color;
+}
+
+.pixie-editor--tabs {
+  .nav-item.nav-link {
+    &.active {
+      border-bottom: solid 2px $secondary;
+    }
+
+    &:hover {
+      color: $lighter;
+    }
+  }
 }
