--- a/src/ui/src/containers/vizier/top-nav.scss
+++ b/src/ui/src/containers/vizier/top-nav.scss
@@ -1,7 +1,7 @@
 @import '../../theme.scss';
 
 .pixie-nav-link-active {
-  background-color: $secondary;
-  color: $white;
-  border-bottom: 2px solid $info;
+  background-color: $dark;
+  color: $light;
+  border-bottom: 2px solid $secondary;
 }
