--- a/src/ui/src/theme.scss
+++ b/src/ui/src/theme.scss
@@ -1,3 +1,10 @@
+// Pixie UI theme definition.
+// IMPORTANT: Declare only variables here! This file is imported by components
+// to access the colors, any CSS rules will get included each time this file
+// is imported.
+
+// Colors
+
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-150: #F5F7F9 !default;
@@ -24,35 +31,81 @@ $teal:    #20c997 !default;
 $cyan:    #5bc0de !default;
 $navy:    #0f1c2d !default;
 
-$primary:       #253238 !default; // Oceanic
-$secondary:     #1d282c !default; // Dark oceanic
-$success:       $green !default;
-$info:          #5bbc7d !default;
-$warning:       $yellow !default;
-$danger:        #cc3b2d !default;
-$light:         #6C6D7A !default;
-$lighter:       #9395a7 !default;
+// Oceanic Dinasty
+$grayed-oceanic:      #8f93a2 !default;
+$light-oceanic:       #b0bec5 !default;
+$pale-teal-oceanic:   #748790 !default;
+$oceanic:             #253238 !default;
+$deep-oceanic:        #0e1518 !default;
+$mid-oceanic:         #445258 !default;
+$not-so-deep-oceanic: #161e21 !default;
+$darker-oceanic:      #1d282c !default;
 
+// Pixie brand
+$pixie-red:          #ff4a39 !default;
+$pixie-green:        #71efce !default;
+$pixie-darker-green: #132e38 !default;
+$pixie-grey:         #aaaaaa !default;
+$pixie-light-grey:   #dddddd !default;
+
+// Others
+$pixie-other-blue:      #4385f4 !default;
+$pixie-brown-army:      #4c4c4e !default;
+$pixie-cyan:            #56ccf2 !default;
+$pixie-dark-green-army: #0f1515 !default;
+$pixie-other-green:     #6fcf97 !default;
+$pixie-other-grey:      #8c92b2 !default;
+$pixie-not-so-pink:     #ffa2a2 !default;
+$pixie-other-red:       #eb5757 !default;
+$pixie-other-grey-2:    #c2c6dc !default;
+$pixie-grey-green:      #334141 !default;
+
+$primary:       $oceanic !default;
+$secondary:     $pixie-green !default;
+$success:       $green !default;
+$info:          $pixie-other-green !default;
+$warning:       $yellow !default;
+$danger:        $pixie-red !default;
+$light:         $pale-teal-oceanic !default;
+$lighter:       $light-oceanic !default;
+$dark:          $darker-oceanic !default;
+$darker:        $deep-oceanic !default;
+$muted:         $pixie-grey !default;
+
+// Classes generated by bootstrap for each of the theme colors:
+// bg-{color} for background, and text-{color} for texts.
 $theme-colors: (
-  "primary": #253238,
-  "secondary": #1d282c,
-  "light": #5bbc7d,
+  "primary":   $primary,
+  "secondary": $secondary,
+  "success": $success,
+  "info": $info,
+  "warning": $warning,
+  "danger": $danger,
+  "light": $light,
+  "lighter": $lighter,
+  "dark": $dark,
+  "darker": $darker,
+  "muted": $muted,
 );
+
+// Remove the margin on headings and paragraphs.
+$headings-margin-bottom: 0;
+$paragraph-margin-bottom: 0;
 
 // Body
 
-$body-bg: #161e21;    // Not so deep oceanic
-$body-color: #748790; // Pale Teal Oceanic
-$content-bg: #0e1518; // Deep Oceanic
-$border-color: #253238; // Light Oceanic
+$body-bg:      $not-so-deep-oceanic !default;
+$body-color:   $pale-teal-oceanic !default;
+$content-bg:   $deep-oceanic !default;
+$border-color: $oceanic !default;
 
 // Links
 
-$link-color:                $white !default;
+$link-color:                $light !default;
 
 // Fonts
 
-$font-size-base:              0.9375rem !default;
+$font-size-base:              0.875rem !default;
 
 // Tables
 
@@ -81,20 +134,6 @@ $input-bg: $gray-150 !default;
 $input-group-addon-bg: $gray-150 !default;
 $input-group-addon-color: $gray-600 !default;
 $input-border-color: $gray-400 !default;
-.input-group > input:not(:last-child) {
-  border-right: 0;
-}
-.input-group > input:not(:last-child):focus {
-  background-color: $gray-150;
-  box-shadow: 0 0 0 0;
-  border-color: $input-border-color;
-}
-.input-group > .input-group-append:not(:first-child) {
-  border-left: 0;
-}
-.input-group .input-group-append .input-group-text {
-  font-weight: 500;
-}
 
 // Dropdowns
 
@@ -108,20 +147,17 @@ $dropdown-link-hover-bg:            $body-bg !default;
 // Navs
 
 $nav-tabs-border-color:             $border-color !default;
-$nav-tabs-link-hover-border-color:  $nav-tabs-border-color !default;
+$nav-tabs-link-hover-border-color:  transparent !default;
+$nav-tabs-link-active-border-color: transparent !default;
+
 $nav-tabs-link-active-bg:           $content-bg !default;
-$nav-tabs-link-active-color:        $white !default;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color !default;
+
+$nav-tabs-link-hover-color:         $lighter !default;
+$nav-tabs-link-active-color:        $lighter !default;
 
 // Navbar
 
-$navbar-padding-y:                  0 !default;
-
-$navbar-dark-hover-color:           $white !default;
-
-$navbar-light-hover-color:          $gray-800 !default;
-$navbar-light-active-color:         $gray-800 !default;
-
+$navbar-dark-hover-color:           $lighter !default;
 
 // Pagination
 
@@ -167,12 +203,11 @@ $progress-bar-color:                $gray-600 !default;
 
 // List group
 
-$list-group-bg:                     lighten($body-bg, 5%) !default;
-$list-group-border-color:           rgba($black, 0.6) !default;
-
-$list-group-hover-bg:               lighten($body-bg, 10%) !default;
+$list-group-bg:                     $primary !default;
+$list-group-border-color:           $darker-oceanic !default;
+$list-group-hover-bg:               $mid-oceanic !default;
 $list-group-active-color:           $white !default;
-$list-group-active-bg:              $list-group-hover-bg !default;
+$list-group-action-active-bg:              $list-group-hover-bg !default;
 $list-group-active-border-color:    $list-group-border-color !default;
 
 $list-group-disabled-color:         $gray-700 !default;
